--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "^3.5.4",
+    "@astrojs/preact": "^4.0.0-beta.1",
     "@astrojs/rss": "^4.0.9",
-    "astro": "^4.16.14",
+    "astro": "^5.0.0-beta.12",
     "preact": "^10.11.3"
   }
 }
