--- a/.github/workflows/merge-target-repo.yml
+++ b/.github/workflows/merge-target-repo.yml
@@ -41,4 +41,4 @@ jobs:
 
       - name: Push Merge Branch to Current Repo
         run: |
-          git push 
+          git push --set-upstream origin merge-target 
