--- a/.github/workflows/merge-source-repo.yml
+++ b/.github/workflows/merge-source-repo.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Configure Git
         run: |
