--- a/.github/workflows/merge-source-repo.yml
+++ b/.github/workflows/merge-source-repo.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       source_repo:
-        description: 'Source repository URL'
+        description: 'Source repository URL (e.g., owner/repo)'
         required: true
         type: string
       source_branch:
@@ -18,12 +18,11 @@ on:
         default: 'source-tracking'
         type: string
 
-# Add permissions block at workflow level
 permissions:
   contents: write
   pull-requests: write
   issues: write
-  
+
 jobs:
   merge-repos:
     runs-on: ubuntu-latest
@@ -41,7 +40,7 @@ jobs:
 
       - name: Add source repository
         run: |
-          git remote add source_repo ${{ github.event.inputs.source_repo }}.git
+          git remote add source_repo https://github.com/${{ github.event.inputs.source_repo }}.git
           git fetch source_repo ${{ github.event.inputs.source_branch }}
 
       - name: Create or update tracking branch
@@ -86,14 +85,24 @@ jobs:
           git push origin ${{ github.event.inputs.tracking_branch }}
           git push origin merged
 
+      - name: Push conflict branch and determine base branch
+        if: env.CONFLICT_BRANCH != ''
+        run: |
+          git push origin ${{ env.CONFLICT_BRANCH }}
+          CURRENT_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+          echo "BASE_BRANCH=$CURRENT_BRANCH" >> $GITHUB_ENV
+          # Add small delay to ensure branch is available
+          sleep 5
+
       - name: Create Pull Request for conflicts
         if: env.CONFLICT_BRANCH != ''
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_TOKEN }}  
+          github-token: ${{ secrets.GH_TOKEN }}
           script: |
             const conflictType = process.env.CONFLICT_TYPE;
             const conflictBranch = process.env.CONFLICT_BRANCH;
+            const baseBranch = process.env.BASE_BRANCH;
             
             let title, body;
             if (conflictType === 'tracking') {
@@ -126,38 +135,25 @@ jobs:
               4. Re-run the workflow`;
             }
             
-            await github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: title,
-              body: body,
-              head: conflictBranch,
-              base: context.ref.replace('refs/heads/', '')
-            });
-
-      - name: Add labels to PR
-        if: env.CONFLICT_BRANCH != ''
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GH_TOKEN }}  
-          script: |
-            const prs = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              head: `${context.repo.owner}:${process.env.CONFLICT_BRANCH}`,
-              state: 'open'
-            });
-            
-            if (prs.data.length > 0) {
+            try {
+              const pr = await github.rest.pulls.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: title,
+                body: body,
+                head: conflictBranch,
+                base: baseBranch
+              });
+              
+              // Add labels
               await github.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: prs.data[0].number,
+                issue_number: pr.data.number,
                 labels: ['merge-conflict']
               });
+            } catch (error) {
+              console.error('Error creating PR:', error);
+              throw error;
             }
-
-      - name: Push conflict branch
-        if: env.CONFLICT_BRANCH != ''
-        run: |
-          git push origin ${{ env.CONFLICT_BRANCH }}
+            
